# zanata-glib

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  zanata-authorizer.c  zanata-authorizer.h  zanata-enums.h  zanata-enumtypes.c.template  zanata-enumtypes.h.template  zanata-iteration.c  zanata-iteration.h  zanata-key-file-authorizer.c  zanata-key-file-authorizer.h  zanata-project.c  zanata-project.h  zanata-session.c  zanata-session.h  zanata-suggestion.c  zanata-suggestion.h  zanata.h
tests/: Makefile.am  run-test.sh.in  test-iterations.js  test-projects.js  test-suggestions.js
